err/a10sdk.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/a10sdk'...
Listing './lib/python3.5/site-packages/a10sdk/common'...
Compiling './lib/python3.5/site-packages/a10sdk/common/A10BaseClass.py'...
***   File "./lib/python3.5/site-packages/a10sdk/common/A10BaseClass.py", line 605
    print 'Substring not found', e
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/a10sdk/core'...
Listing './lib/python3.5/site-packages/a10sdk/core/A10_copy'...
Listing './lib/python3.5/site-packages/a10sdk/core/A10_file'...
Listing './lib/python3.5/site-packages/a10sdk/core/A10_import'...
Listing './lib/python3.5/site-packages/a10sdk/core/A10_license'...
Listing './lib/python3.5/site-packages/a10sdk/core/A10_object'...
Listing './lib/python3.5/site-packages/a10sdk/core/A10_reload'...
Listing './lib/python3.5/site-packages/a10sdk/core/aam'...
Listing './lib/python3.5/site-packages/a10sdk/core/access'...
Listing './lib/python3.5/site-packages/a10sdk/core/accounting'...
Listing './lib/python3.5/site-packages/a10sdk/core/acos'...
Listing './lib/python3.5/site-packages/a10sdk/core/active'...
Listing './lib/python3.5/site-packages/a10sdk/core/admin'...
Listing './lib/python3.5/site-packages/a10sdk/core/aflex'...
Listing './lib/python3.5/site-packages/a10sdk/core/application'...
Listing './lib/python3.5/site-packages/a10sdk/core/arp'...
Listing './lib/python3.5/site-packages/a10sdk/core/audit'...
Listing './lib/python3.5/site-packages/a10sdk/core/authentication'...
Listing './lib/python3.5/site-packages/a10sdk/core/authorization'...
Listing './lib/python3.5/site-packages/a10sdk/core/backup'...
Listing './lib/python3.5/site-packages/a10sdk/core/banner'...
Listing './lib/python3.5/site-packages/a10sdk/core/bfd'...
Listing './lib/python3.5/site-packages/a10sdk/core/bgp'...
Listing './lib/python3.5/site-packages/a10sdk/core/bios'...
Listing './lib/python3.5/site-packages/a10sdk/core/boot'...
Listing './lib/python3.5/site-packages/a10sdk/core/bootimage'...
Listing './lib/python3.5/site-packages/a10sdk/core/bpdu'...
Listing './lib/python3.5/site-packages/a10sdk/core/bridge'...
Listing './lib/python3.5/site-packages/a10sdk/core/cgnv6'...
Listing './lib/python3.5/site-packages/a10sdk/core/class_list'...
Listing './lib/python3.5/site-packages/a10sdk/core/class_list_geo_location'...
Listing './lib/python3.5/site-packages/a10sdk/core/class_list_oper'...
Listing './lib/python3.5/site-packages/a10sdk/core/classification'...
Listing './lib/python3.5/site-packages/a10sdk/core/clock'...
Listing './lib/python3.5/site-packages/a10sdk/core/cm'...
Listing './lib/python3.5/site-packages/a10sdk/core/configure'...
Listing './lib/python3.5/site-packages/a10sdk/core/counter'...
Listing './lib/python3.5/site-packages/a10sdk/core/delete'...
Listing './lib/python3.5/site-packages/a10sdk/core/device'...
Listing './lib/python3.5/site-packages/a10sdk/core/disable'...
Listing './lib/python3.5/site-packages/a10sdk/core/dnssec'...
Listing './lib/python3.5/site-packages/a10sdk/core/enable'...
Listing './lib/python3.5/site-packages/a10sdk/core/erase'...
Listing './lib/python3.5/site-packages/a10sdk/core/event'...
Listing './lib/python3.5/site-packages/a10sdk/core/export'...
Listing './lib/python3.5/site-packages/a10sdk/core/fail'...
Listing './lib/python3.5/site-packages/a10sdk/core/fan'...
Listing './lib/python3.5/site-packages/a10sdk/core/force'...
Listing './lib/python3.5/site-packages/a10sdk/core/glid'...
Listing './lib/python3.5/site-packages/a10sdk/core/gslb'...
Listing './lib/python3.5/site-packages/a10sdk/core/hd'...
Listing './lib/python3.5/site-packages/a10sdk/core/health'...
Listing './lib/python3.5/site-packages/a10sdk/core/hostname'...
Listing './lib/python3.5/site-packages/a10sdk/core/hsm'...
Listing './lib/python3.5/site-packages/a10sdk/core/icmp'...
Listing './lib/python3.5/site-packages/a10sdk/core/icmpv6'...
Listing './lib/python3.5/site-packages/a10sdk/core/interface'...
Listing './lib/python3.5/site-packages/a10sdk/core/ip'...
Listing './lib/python3.5/site-packages/a10sdk/core/ipv4'...
Listing './lib/python3.5/site-packages/a10sdk/core/ipv6'...
Listing './lib/python3.5/site-packages/a10sdk/core/key'...
Listing './lib/python3.5/site-packages/a10sdk/core/lacp'...
Listing './lib/python3.5/site-packages/a10sdk/core/ldap'...
Listing './lib/python3.5/site-packages/a10sdk/core/link'...
Listing './lib/python3.5/site-packages/a10sdk/core/lldp'...
Listing './lib/python3.5/site-packages/a10sdk/core/locale'...
Listing './lib/python3.5/site-packages/a10sdk/core/logging'...
Listing './lib/python3.5/site-packages/a10sdk/core/mac'...
Listing './lib/python3.5/site-packages/a10sdk/core/maximum'...
Listing './lib/python3.5/site-packages/a10sdk/core/memory'...
Listing './lib/python3.5/site-packages/a10sdk/core/mirror'...
Listing './lib/python3.5/site-packages/a10sdk/core/monitor'...
Listing './lib/python3.5/site-packages/a10sdk/core/multi'...
Listing './lib/python3.5/site-packages/a10sdk/core/netflow'...
Listing './lib/python3.5/site-packages/a10sdk/core/network'...
Listing './lib/python3.5/site-packages/a10sdk/core/ntp'...
Listing './lib/python3.5/site-packages/a10sdk/core/overlay'...
Listing './lib/python3.5/site-packages/a10sdk/core/partition'...
Listing './lib/python3.5/site-packages/a10sdk/core/pki'...
Listing './lib/python3.5/site-packages/a10sdk/core/poap'...
Listing './lib/python3.5/site-packages/a10sdk/core/qos'...
Listing './lib/python3.5/site-packages/a10sdk/core/radius'...
Listing './lib/python3.5/site-packages/a10sdk/core/rate'...
Listing './lib/python3.5/site-packages/a10sdk/core/rba'...
Listing './lib/python3.5/site-packages/a10sdk/core/reboot'...
Listing './lib/python3.5/site-packages/a10sdk/core/restore'...
Listing './lib/python3.5/site-packages/a10sdk/core/route'...
Listing './lib/python3.5/site-packages/a10sdk/core/router'...
Listing './lib/python3.5/site-packages/a10sdk/core/rrd'...
Listing './lib/python3.5/site-packages/a10sdk/core/running'...
Listing './lib/python3.5/site-packages/a10sdk/core/scaleout'...
Listing './lib/python3.5/site-packages/a10sdk/core/session'...
Listing './lib/python3.5/site-packages/a10sdk/core/sessions'...
Listing './lib/python3.5/site-packages/a10sdk/core/sflow'...
Listing './lib/python3.5/site-packages/a10sdk/core/shutdown'...
Listing './lib/python3.5/site-packages/a10sdk/core/slb'...
Listing './lib/python3.5/site-packages/a10sdk/core/smtp'...
Listing './lib/python3.5/site-packages/a10sdk/core/snmp'...
Listing './lib/python3.5/site-packages/a10sdk/core/so'...
Listing './lib/python3.5/site-packages/a10sdk/core/sshd'...
Listing './lib/python3.5/site-packages/a10sdk/core/syn'...
Listing './lib/python3.5/site-packages/a10sdk/core/sys'...
Listing './lib/python3.5/site-packages/a10sdk/core/syslog'...
Listing './lib/python3.5/site-packages/a10sdk/core/system'...
Listing './lib/python3.5/site-packages/a10sdk/core/tacacs'...
Listing './lib/python3.5/site-packages/a10sdk/core/techreport'...
Listing './lib/python3.5/site-packages/a10sdk/core/techsupport'...
Listing './lib/python3.5/site-packages/a10sdk/core/terminal'...
Listing './lib/python3.5/site-packages/a10sdk/core/tftp'...
Listing './lib/python3.5/site-packages/a10sdk/core/timezone'...
Listing './lib/python3.5/site-packages/a10sdk/core/trunk'...
Listing './lib/python3.5/site-packages/a10sdk/core/upgrade'...
Listing './lib/python3.5/site-packages/a10sdk/core/vcs'...
Listing './lib/python3.5/site-packages/a10sdk/core/ve'...
Listing './lib/python3.5/site-packages/a10sdk/core/version'...
Listing './lib/python3.5/site-packages/a10sdk/core/vlan'...
Listing './lib/python3.5/site-packages/a10sdk/core/vpn'...
Listing './lib/python3.5/site-packages/a10sdk/core/vrrp'...
Listing './lib/python3.5/site-packages/a10sdk/core/waf'...
Listing './lib/python3.5/site-packages/a10sdk/core/web'...
Listing './lib/python3.5/site-packages/a10sdk/core/write'...
Listing './lib/python3.5/site-packages/a10sdk-4.0.1.214.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
